syntax = "proto3";

option go_package = "module github.com/yakumioto/emptiness/pkg/vpn";

service VPN {
  rpc Connect(Request) returns(Response);
  rpc Disconnect(Request) returns(Response);
  rpc RegisterRoute(Request) returns(Response);
  rpc UnregisterRoute(Request) returns(Response);
  rpc TransferData(stream DataPacket) returns (stream DataPacket);
}

message Request {
  bytes encrypted_payload = 1;
}

message Response {
  StatusCode code = 1;
}

message ConnectRequest {
  string tunnel_id = 1;
  int64 timestamp = 2;
  string nonce = 3;
}

message DisconnectRequest {
  string tunnel_id = 1;
}

message RouteRequest {
  string tunnel_id = 1;
  repeated string route = 2;
}

message DataPacket {
  string tunnel_id = 1;
  bytes payload = 2;
}

enum AuthType {
  NONE = 0;
  XOR = 1;
}

enum StatusCode {
  OK = 0;
  UNKNOWN_ERROR = 1;
  INVALID_AUTHORIZATION = 2;
  EXISTED_TUNNEL = 3;
  EXISTED_ROUTE = 4;
  NOT_FOUND_TUNNEL = 5;
}